--- a/content/attacks/posts/2024-03-04-OrdiZK.md
+++ b/content/attacks/posts/2024-03-04-OrdiZK.md
@@ -15,7 +15,7 @@ loss: 1400000
 ## Summary
 
 The part of the stolen funds were distributed between two addresses.
-OrdiZK, a cross-chain bridging protocol, conducted an exit scam on March 4, resulting in a loss of approximately 1.4 million USD. The OrdiZK tokens deployer sold large amount of the tokens depleted two liquidity pools, and withdrew funds from OZKStake contract.The part of the stolen funds were distributed between two addresses,the major part are still in scammer's wallet.The websites, social media X and Telegram account were shut down,indicating an exit scam.
+OrdiZK, a cross-chain bridging protocol, conducted an exit scam on March 4, 2024,resulting in a loss of approximately 1.4 million USD. The OrdiZK tokens deployer sold large amount of the tokens depleted two liquidity pools, and withdrew funds from OZKStake contract.The part of the stolen funds were distributed between two addresses,the major part are still in scammer's wallet.The websites, social media X and Telegram account were shut down,indicating an exit scam.
 
 ## Incident-related participants
 
@@ -37,7 +37,7 @@ The identity of the scammer remark on etherscan.io as Fake_Phishing323133 former
 	- ozk.treasury 70.59 ETH 
 	- ozk.marketing 46.66 ETH
 	- Scammer address 277.89 ETH
-    
+
 ## Timeline
 
 - **Dec 8, 2023, 11:26 PM UTC:** The OrdiZK (OZK) token was [created](https://etherscan.io/tx/0xf7b4edfaf018b39bbc035d757bc6103fbf4cba03d46805bff93623316368fe8a).
