--- a/content/attacks/posts/2024-02-14-Miner.md
+++ b/content/attacks/posts/2024-02-14-Miner.md
@@ -1,17 +1,17 @@
 ---
 date: 2024-02-14
-target-entities: Miner
+target-entities: Miner ERC-X
 entity-types:
   - NFT
   - Token
 attack-types: Smart Contract Exploit
-title: "Miner Suffers $466,000 Loss in Exploit"
+title: "Miner ERC-X avatar collection Suffers $466,000 Loss"
 loss: 466000
 ---
 
 ## Summary
 
-Miner, an ERC-X avatar collection, faced a significant exploit on the Ethereum Mainnet on February 14, 2024, leading to a loss of 168.8 ETH, valued at around $466,000. The exploit was facilitated by a smart contract vulnerability related to a double-transfer issue, which arose from inadequate input validation. This allowed an exploiter to manipulate the transfer functionality, doubling their holdings by transferring tokens to themselves due to the contract failing to prevent self-transfers.
+On February 14, 2024, the Miner ERC-X avatar collection experienced a critical security breach on the Ethereum Mainnet, resulting in the unauthorized withdrawal of 168.8 ETH, equivalent to approximately $466,000. The root cause of this breach was a smart contract vulnerability stemming from insufficient input validation, specifically, a double-transfer flaw. This issue enabled an attacker to exploit the contract's transfer function, effectively duplicating their token balance by executing self-transfers, which were not properly restricted by the contract's logic.
 
 ## Attackers
 
@@ -22,7 +22,7 @@ The identity of the attacker is unknown. The following addresses are associated 
 
 ## Losses
 
-The loss amounted to 168.8 ETH worth $466,000.
+The loss amounted to 168.8 ETH, worth $466,000 at the time of the attack.
 
 ## Timeline
 
