--- a/content/attacks/posts/2023-08-07-Steadefi.md
+++ b/content/attacks/posts/2023-08-07-Steadefi.md
@@ -29,7 +29,7 @@ The identity of the attacker is unknown. The following addresses are associated 
 
 ## Losses
 
-SteadeFi lost approximately $1,140,000 in total.
+Steadefi lost approximately $1,140,000 in total.
 
 ## Timeline
 
